--- a/place.css
+++ b/place.css
@@ -63,10 +63,6 @@ margin-bottom: 0.5rem;
   font-size: 1.15rem;
 }
 
-.bigCard-content #website {
-
-}
-
 .tags {
   margin-top: 15px;
 }
